test/error/ClassDuplicate.ci
public class Test
{
}

public class Test
// FIXME: line
{ //ERROR: Duplicate symbol
	public static bool Run() => true;
}
